Unify password hashing with BCrypt (Sabana / Spring Boot compatible) (#615)
## Summary
Aligns ADempiere's password hashing with the Spring Boot (Sabana) applications that share the same `AD_User.Password` column, so a password set in either system authenticates in both. New passwords are hashed with the very same `BCryptPasswordEncoder` Sabana uses (`$2a$`, cost 10). Existing SHA-512 + salt passwords keep working and are transparently upgraded to BCrypt on the next successful login. The behavior is controlled per database via a SysConfig flag.

## Context / Problem
- ADempiere stored passwords as SHA-512 (1000 iterations) + `AD_User.Salt`; Sabana stores BCrypt (`$2a$…`, salt embedded, `AD_User.Salt` = null).
- Same table/column, incompatible formats → a password set in one system failed to authenticate in the other.

## Changes (backend `adempiere-grpc-server`, via patches)
- Add dependency `org.springframework.security:spring-security-crypto:6.5.7` (same `BCryptPasswordEncoder` as Sabana).
- **New provider `org.solop.secure.SecureBCrypt implements SecureInterface`**: BCrypt password hashing + dual verification (BCrypt **or** legacy SHA-512 + salt). Reversible encryption / digest / SHA-512 are delegated to the legacy `Secure` engine, so column encryption and already-encrypted data keep exactly the previous behavior.
- **`SecureInterface`** (override): new password methods with default legacy behavior — `getPasswordHash`, `isPasswordHashEncrypted`, `isValidPasswordHash(plain, hash, salt)` and a convenience `isValidPasswordHash(plain, hash)` overload. `ADEMPIERE_SECURE_DEFAULT` now points to `org.solop.secure.SecureBCrypt`, making BCrypt the default provider with no env/JVM flag (still overridable with `-DADEMPIERE_SECURE=…`).
- **`SecureEngine`** (override): static delegators for the new methods.
- **`MUser.setPassword`**: writes BCrypt when the SysConfig `USER_PASSWORD_HASH_BCRYPT` is enabled (default), otherwise the legacy SHA-512 + salt.
- **`Login.getAuthenticate